fix: make sure cname is copied to dist

--- a/.github/workflows/deploy-github.yml
+++ b/.github/workflows/deploy-github.yml
@@ -1,6 +1,10 @@
 name: Build and Deploy to GitHub
 env:
   GITHUB_URL: https://trovster.github.io
+on:
+  push:
+    branches:
+      - github
 
 jobs:
   build-and-deploy:
