fix: add stats for 2023

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trovster/madebysurface.git"
+    "url": "git+https://github.com/trovster/stats.trovster.com.git"
   },
   "author": {
     "name": "Trevor Morris",
